# adk-agentic-logging

./: .gitignore  README.md  pyproject.toml  pytest_output.txt
.github/workflows/: publish.yaml  python-package.yml
src/adk_agentic_logging/: __init__.py  otel_setup.py
src/adk_agentic_logging/adk/: extractors.py  instrumentation.py
src/adk_agentic_logging/core/: context.py  logger.py  metadata.py  serialization.py
src/adk_agentic_logging/integrations/: django.py  fastapi.py  flask.py
src/adk_agentic_logging/otel/: config.py  processors.py
tests/: repro_token_bug.py  test_core.py  test_enrichment.py  test_otel_processors.py  test_otel_setup.py  test_temperature_logging.py
tests/integrations/: test_adk_fastapi.py  test_fastapi.py
